--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ steps:
   displayName: 'waiting for some time'
   inputs:
     targetType: 'inline'
-    script: 'PowerShell@2'
+    script: 'Start-Sleep -Seconds 600'
 
 - task: Npm@1
   displayName: 'Run npm install'
